Modifed templates to display upload from database.

--- a/blog1/templates/blog/upload.html
+++ b/blog1/templates/blog/upload.html
@@ -1,89 +1,30 @@
 <html>
   <head>
 <title>upload</title>
-
-  <title>upload form</title>
-  <style>
-table{
-	border:3px solid white;
-	padding:5px;
-border-spacing:20px;
-}
-</style>
-  </head>
+</head>
 <body>
-
-<div class="a">
-
-<h1>UPLOAD FORM</h1><br>
+<div>
+<h1>UPLOAD</h1><br>
 </div>
-<form method="POST" class="post-form">{% csrf_token %}
-
-     <table>
-           <tr>
-               <td>
-                   USERNAME:
-               </td>
-                <td>
-                   <input type="text" name="username" required>
-                </td>
-           </tr>
-            <tr>
-                 <td>
-                   PHONE_NO:
-                 </td>
-                 <td>
-                  <input type="text" name="phone_no" required>
-                 </td>
-           </tr>
-		   <tr>
-				<td>
-				    ADDRESS:
-				</td>
-				<td>
-				    <input type="text" name="address" required>
-				</td>
-			</tr>
-			<tr>
-				<td>
-				    LOCALITY:
-				</td>
-				<td>
-				    <input type="text" name="locality" required>
-				</td>
-			</tr>
-			<tr>
-				<td>
-				    CITY:
-				</td>
-				<td>
-				    <input type="text" name="city" required>
-				</td>
-			</tr>
-			<tr>
-				<td>
-				    STATE:
-				</td>
-				<td>
-				    <input type="text" name="state" required>
-				</td>
-			</tr>
-<tr>
-				<td>
-				    PINCODE:
-				</td>
-				<td>
-				    <input type="text" name="pincode" required>
-				</td>
-			</tr>
-
-		</table>
-</form>
-<br><form>
-    SELECT IMAGE:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-	<br><br><input type="submit" value="Submit" name="Submit" style="background-color:gray;
-	color:solid black;">
-</form>
+<div>
+<h2><a href="">Akhila</a></h2>
+<p>address: channasandra</p>
+<p> phone_no: 9964264736</p>
+</div>
+<div>
+<h2><a href="">Vasundhara</a></h2>
+<p>address: jumbo savari dinne</p>
+<p> phone_no:9964264736</p>
+</div>
+<div>
+<h2><a href="">Veda</a></h2>
+<p>address: Tyagarajanagar</p>
+<p> phone_no:7975837247</p>
+</div>
+<div>
+<h2><a href="">Smitha</a></h2>
+<p>address: padmanabhanagar</p>
+<p> phone_no:8547896145 </p>
+</div>
 </body>
 </html>
