Added view and template for detailed blog upload as well as CSS for the site.

--- a/blog1/templates/blog/upload.html
+++ b/blog1/templates/blog/upload.html
@@ -1,30 +1,59 @@
+{% load static %}
 <html>
-  <head>
-<title>upload</title>
+<head>
+<title>home</title>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div>
-<h1>UPLOAD</h1><br>
-</div>
-<div>
+<div class="page-header">
+<h1><a href="">WASTE MANAGEMENT</a></h1><br>
+<p>Arising quality of life, and high rates of resource consumption patterns have had a unintended and negative
+impact on the urban environment - generation of wastes far beyond the handling capacities of urban governments and agencies.<br>
+Cities are now grappling with the problems of high volumes of waste, the costs involved,<br>
+the disposal technologies and methodologies, and the impact of wastes on the local and global environment.<br>
+But these problems have also provided a window of opportunity for cities to find solutions - involving<br>
+the community and the private sector; involving innovative technologies and disposal methods; <br>
+and involving behaviour changes and awareness raising. These issues have been amply demonstrated <br>
+by good practices from many cities around the world.<br>
+There is a need for a complete rethinking of "waste" - to analyse if waste is indeed waste.<br>
+<mark>WASTE to become WEALTH <br>
+REFUSE to become RESOURCE<br/>
+TRASH to become CASH</mark><br>
+There is a clear need for the current approach of waste disposal that is focussed on municipalities and<br>
+uses high energy/high technology, to move more towards waste processing and waste recycling<br>hence
+this webpage is a platform which provides people to keep the locaity clean by uploading the images of waste in their locality.
+</div><br><br><br>
+<div class="content container">
+<div class="row">
+<div class="col-md-8">
+<div class="upload">
+<h4><a href="">THE PEOPLE WHO HAVE UPLOADED:</a></h4><br><br>
 <h2><a href="">Akhila</a></h2>
 <p>address: channasandra</p>
 <p> phone_no: 9964264736</p>
 </div>
-<div>
+<div class="upload">
 <h2><a href="">Vasundhara</a></h2>
 <p>address: jumbo savari dinne</p>
 <p> phone_no:9964264736</p>
 </div>
-<div>
+<div class="upload">
 <h2><a href="">Veda</a></h2>
 <p>address: Tyagarajanagar</p>
 <p> phone_no:7975837247</p>
 </div>
-<div>
+<div class="upload">
 <h2><a href="">Smitha</a></h2>
 <p>address: padmanabhanagar</p>
 <p> phone_no:8547896145 </p>
 </div>
+</div>
+</div>
+</div>
+<h2><a href="">Click here to upload the image<a></h2>
+<button type="submit"> <a href="up.html">Upload </a></button>
 </body>
 </html>
